--- a/kontakt-oss/index.html
+++ b/kontakt-oss/index.html
@@ -9,71 +9,85 @@
 </head>
 <body>
   <header class="site-header">
-    <a class="logo" href="/">HS Rens & Vedlikehold</a>
-    <nav class="nav">
-      <a href="/tjenester/">Tjenester</a>
-      <a href="/varmepumperens/">Varmepumperens</a>
-      <a href="/resultater/">Resultater</a>
-      <a href="/om-oss/">Om oss</a>
-      <a class="cta" href="/kontakt-oss/" aria-current="page">Kontakt</a>
-    </nav>
+    <div class="wrap">
+      <a class="logo" href="/">HS Rens & Vedlikehold</a>
+      <nav class="nav">
+        <a href="/tjenester/">Tjenester</a>
+        <a href="/varmepumperens/">Varmepumperens</a>
+        <a href="/resultater/">Resultater</a>
+        <a href="/om-oss/">Om oss</a>
+        <a class="cta" href="/kontakt-oss/" aria-current="page">Kontakt</a>
+      </nav>
+    </div>
   </header>
 
   <main class="wrap">
     <h1>Kontakt oss</h1>
 
     <div class="grid-2">
-      <!-- Kontaktinfo & kart -->
+      <!-- Info + kart -->
       <section class="card">
         <h2>HS Rens & Vedlikehold</h2>
         <p><strong>Adresse:</strong> Rollandslia 221, 5115 Ulset</p>
         <p><strong>Telefon:</strong> <a href="tel:+47 00000000">+47 00 00 00 00</a></p>
         <p><strong>E-post:</strong> <a href="mailto:post@hsrens.no">post@hsrens.no</a></p>
 
-        <div class="map-wrap" style="margin-top:1rem">
+        <div class="map-wrap" style="margin-top:12px">
           <iframe
             title="Kart – HS Rens & Vedlikehold"
-            width="100%" height="320" style="border:0" loading="lazy" allowfullscreen
+            loading="lazy" allowfullscreen
             referrerpolicy="no-referrer-when-downgrade"
             src="https://www.google.com/maps?q=Rollandslia%20221,%205115%20Ulset&output=embed">
           </iframe>
         </div>
       </section>
 
-      <!-- Netlify-skjema -->
+      <!-- Skjema (Netlify) -->
       <section class="card">
         <h2>Forespørsel</h2>
         <form name="kontakt" method="POST" data-netlify="true" netlify-honeypot="bot-field">
           <input type="hidden" name="form-name" value="kontakt" />
-          <p class="hidden">
+          <p class="hidden" style="display:none">
             <label>Ikke fyll ut: <input name="bot-field" /></label>
           </p>
-          <p>
-            <label>Navn<br><input type="text" name="navn" required></label>
-          </p>
-          <p>
-            <label>E-post<br><input type="email" name="epost" required></label>
-          </p>
-          <p>
-            <label>Telefon<br><input type="tel" name="telefon" required></label>
-          </p>
-          <p>
-            <label>Melding<br><textarea name="melding" rows="6" required></textarea></label>
-          </p>
+          <p><label>Navn<br><input type="text" name="navn" required></label></p>
+          <p><label>E-post<br><input type="email" name="epost" required></label></p>
+          <p><label>Telefon<br><input type="tel" name="telefon" required></label></p>
+          <p><label>Melding<br><textarea name="melding" rows="6" required></textarea></label></p>
           <p><button class="button" type="submit">Send forespørsel</button></p>
+          <p class="muted">Vi svarer normalt samme dag.</p>
         </form>
-        <p class="muted">Vi svarer som regel samme dag.</p>
       </section>
     </div>
   </main>
 
   <footer class="site-footer">
-    <div>Bergen og omegn</div>
-    <nav>
-      <a href="/">Forside</a>
-      <a href="/tjenester/">Tjenester</a>
-      <a href="/om-oss/">Om oss</a>
-    </nav>
+    <div class="wrap">
+      <div class="footer-grid">
+        <div>
+          <h4>HS Rens & Vedlikehold</h4>
+          <p>Rollandslia 221, 5115 Ulset</p>
+          <p><a href="tel:+47 00000000">+47 00 00 00 00</a><br>
+             <a href="mailto:post@hsrens.no">post@hsrens.no</a></p>
+        </div>
+        <div>
+          <h4>Navigasjon</h4>
+          <p>
+            <a href="/">Forside</a><br>
+            <a href="/tjenester/">Tjenester</a><br>
+            <a href="/varmepumperens/">Varmepumperens</a><br>
+            <a href="/resultater/">Resultater</a><br>
+            <a href="/om-oss/">Om oss</a>
+          </p>
+        </div>
+        <div>
+          <h4>Område</h4>
+          <p>Bergen og omegn</p>
+        </div>
+      </div>
+      <div class="footer-meta">© <span id="y"></span> HS Rens & Vedlikehold</div>
+    </div>
+    <script>document.getElementById('y').textContent=new Date().getFullYear()</script>
   </footer>
 </body>
 </html>
