--- a/kontakt-oss/index.html
+++ b/kontakt-oss/index.html
@@ -1,93 +1,79 @@
 <!doctype html>
 <html lang="no">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Kontakt oss – HS Rens & Vedlikehold</title>
-  <link rel="stylesheet" href="/assets/css/styles.css" />
-  <link rel="icon" href="/images/favicon.png" />
+  <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
-<body>
+<body class="contact">
+
+  <!-- Header -->
   <header class="site-header">
-    <div class="wrap">
-      <a class="logo" href="/">HS Rens & Vedlikehold</a>
-      <nav class="nav">
-        <a href="/tjenester/">Tjenester</a>
-        <a href="/varmepumperens/">Varmepumperens</a>
-        <a href="/resultater/">Resultater</a>
-        <a href="/om-oss/">Om oss</a>
-        <a class="cta" href="/kontakt-oss/" aria-current="page">Kontakt</a>
+    <div class="container">
+      <nav class="navbar">
+        <a class="logo" href="/">HS Rens & Vedlikehold</a>
+        <div class="navlinks">
+          <a href="/tjenester/">Tjenester</a>
+          <a href="/varmepumperens/">Varmepumperens</a>
+          <a href="/resultater/">Resultater</a>
+          <a href="/om-oss/">Om oss</a>
+          <a class="active" href="/kontakt-oss/">Kontakt oss</a>
+        </div>
       </nav>
     </div>
   </header>
 
-  <main class="wrap">
-    <h1>Kontakt oss</h1>
+  <!-- Hero -->
+  <div class="page-hero">
+    <div class="container">
+      <h1>Kontakt oss</h1>
+    </div>
+  </div>
 
-    <div class="grid-2">
-      <!-- Info + kart -->
+  <!-- Content -->
+  <main class="section">
+    <div class="container grid grid-2">
       <section class="card">
         <h2>HS Rens & Vedlikehold</h2>
-        <p><strong>Adresse:</strong> Rollandslia 221, 5115 Ulset</p>
-        <p><strong>Telefon:</strong> <a href="tel:+47 00000000">+47 00 00 00 00</a></p>
-        <p><strong>E-post:</strong> <a href="mailto:post@hsrens.no">post@hsrens.no</a></p>
 
-        <div class="map-wrap" style="margin-top:12px">
-          <iframe
-            title="Kart – HS Rens & Vedlikehold"
-            loading="lazy" allowfullscreen
-            referrerpolicy="no-referrer-when-downgrade"
-            src="https://www.google.com/maps?q=Rollandslia%20221,%205115%20Ulset&output=embed">
-          </iframe>
+        <p class="kvp"><b>Adresse:</b> Rollandslia 221, 5115 Ulset</p>
+        <p class="kvp"><b>Telefon:</b> <a href="tel:+4740000000">+47 40 00 00 00</a></p>
+        <p class="kvp"><b>E-post:</b> <a href="mailto:post@hsrens.no">post@hsrens.no</a></p>
+
+        <div style="margin-top:14px">
+          <iframe class="map"
+            src="https://www.google.com/maps?q=Rollandslia%20221%2C%205115%20Ulset&hl=no&z=15&output=embed"
+            loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </section>
 
-      <!-- Skjema (Netlify) -->
       <section class="card">
-        <h2>Forespørsel</h2>
-        <form name="kontakt" method="POST" data-netlify="true" netlify-honeypot="bot-field">
-          <input type="hidden" name="form-name" value="kontakt" />
-          <p class="hidden" style="display:none">
-            <label>Ikke fyll ut: <input name="bot-field" /></label>
-          </p>
-          <p><label>Navn<br><input type="text" name="navn" required></label></p>
-          <p><label>E-post<br><input type="email" name="epost" required></label></p>
-          <p><label>Telefon<br><input type="tel" name="telefon" required></label></p>
-          <p><label>Melding<br><textarea name="melding" rows="6" required></textarea></label></p>
-          <p><button class="button" type="submit">Send forespørsel</button></p>
-          <p class="muted">Vi svarer normalt samme dag.</p>
+        <h2>Be om tilbud</h2>
+        <p>Send oss noen ord om hva du ønsker rengjort, så svarer vi raskt.</p>
+        <form name="kontakt" method="POST" data-netlify="true">
+          <input type="hidden" name="form-name" value="kontakt">
+          <div style="display:grid; gap:10px">
+            <input required name="navn"  placeholder="Navn"  />
+            <input required name="epost" type="email" placeholder="E-post" />
+            <input name="telefon" placeholder="Telefon" />
+            <textarea required name="melding" rows="6" placeholder="Hva kan vi hjelpe med?"></textarea>
+            <button type="submit" style="background:var(--brand);color:#fff;border:0;padding:12px 16px;border-radius:10px;font-weight:700">Send</button>
+          </div>
         </form>
       </section>
     </div>
   </main>
 
+  <!-- Footer -->
   <footer class="site-footer">
     <div class="wrap">
-      <div class="footer-grid">
-        <div>
-          <h4>HS Rens & Vedlikehold</h4>
-          <p>Rollandslia 221, 5115 Ulset</p>
-          <p><a href="tel:+47 00000000">+47 00 00 00 00</a><br>
-             <a href="mailto:post@hsrens.no">post@hsrens.no</a></p>
-        </div>
-        <div>
-          <h4>Navigasjon</h4>
-          <p>
-            <a href="/">Forside</a><br>
-            <a href="/tjenester/">Tjenester</a><br>
-            <a href="/varmepumperens/">Varmepumperens</a><br>
-            <a href="/resultater/">Resultater</a><br>
-            <a href="/om-oss/">Om oss</a>
-          </p>
-        </div>
-        <div>
-          <h4>Område</h4>
-          <p>Bergen og omegn</p>
-        </div>
-      </div>
-      <div class="footer-meta">© <span id="y"></span> HS Rens & Vedlikehold</div>
+      <div><strong>HS Rens & Vedlikehold</strong></div>
+      <div>Rollandslia 221, 5115 Ulset</div>
+      <div><a href="tel:+4740000000">+47 40 00 00 00</a> • <a href="mailto:post@hsrens.no">post@hsrens.no</a></div>
     </div>
-    <script>document.getElementById('y').textContent=new Date().getFullYear()</script>
+    <div class="copy">© 2025 HS Rens & Vedlikehold</div>
   </footer>
+
 </body>
 </html>
