--- a/tjenester/index.html
+++ b/tjenester/index.html
@@ -1,41 +1,62 @@
-<!doctype html><html lang="no"><head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Tjenester – HS Rens & Vedlikehold</title>
-<link rel="stylesheet" href="/assets/css/styles.css">
-</head><body>
-<header class="header"><div class="container nav">
-  <a class="brand" href="/"><img src="/images/logo.jpg" alt="HS Rens & Vedlikehold" class="brand-logo"><div><h1>HS Rens & Vedlikehold</h1><small>Ren luft • Bergen & omegn</small></div></a>
-  <nav><button class="burger">☰</button><div class="menu" id="mainmenu">
-    <a href="/tjenester/">Tjenester</a><a href="/varmepumperens/">Varmepumperens</a><a href="/resultater/">Resultater</a><a href="/om-oss/">Om oss</a><a class="btn" href="/kontakt-oss/">Få tilbud</a>
-  </div></nav>
-</div></header>
+<!doctype html>
+<html lang="no">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Tjenester – HS Rens & Vedlikehold</title>
+  <link rel="stylesheet" href="/assets/css/styles.css">
+</head>
+<body>
 
-<main class="section light"><div class="container">
-  <p class="kicker">Tjenester</p>
-  <h2>Tjenester – hva vi kan hjelpe deg med</h2>
-  <div class="grid mt-24">
-    <article class="card"><h3>Kanalrens</h3><p>Rensing av kanaler, avtrekk og ventiler. Bedre luft og mindre støv.</p></article>
-    <article class="card"><h3>Varmepumperens</h3><p>Fastpris 1399,- inkl. mva. Effektiv rens av innedel og drenering.</p></article>
-    <article class="card"><h3>Avfetting & desinfisering</h3><p>Ved behov bruker vi skånsomme midler for hygiensk resultat.</p></article>
-    <article class="card"><h3>Serviceavtaler</h3><p>For borettslag og næring – faste intervaller, faste priser.</p></article>
-    <article class="card"><h3>Inspeksjon</h3><p>Kamera og dokumentasjon – før/etter-bilder i enkel rapport.</p></article>
-    <article class="card"><h3>Akutt hjelp</h3><p>Tett kanal eller luktproblemer? Vi hjelper raskt.</p></article>
+<header class="site-header">
+  <div class="container">
+    <nav class="navbar">
+      <a class="logo" href="/">HS Rens & Vedlikehold</a>
+      <div class="navlinks">
+        <a href="/">Forside</a>
+        <a class="active" href="/tjenester/">Tjenester</a>
+        <a href="/varmepumperens/">Varmepumperens</a>
+        <a href="/resultater/">Resultater</a>
+        <a href="/om-oss/">Om oss</a>
+        <a href="/kontakt-oss/">Kontakt oss</a>
+      </div>
+    </nav>
+  </div>
+</header>
+
+<div class="page-hero"><div class="container"><h1>Tjenester</h1></div></div>
+
+<main class="section">
+  <div class="container cards">
+    <article class="card card-service">
+      <h3>Ventilasjonsrens</h3>
+      <p>Rens av kjøkkenavtrekk og ventilasjonskanaler. Vi bruker roterende børster og kraftig avsug for å fjerne støv og fett.</p>
+    </article>
+
+    <article class="card card-service">
+      <h3>Rens av varmepumpe</h3>
+      <p>Demontering og dyp rens av innedel (ev. utedel). Bedre luftkvalitet, høyere effekt og lavere strømforbruk.</p>
+    </article>
+
+    <article class="card card-service">
+      <h3>Kanalkontroll & filter</h3>
+      <p>Visuell kontroll, enkel tetthetssjekk og rådgivning om filter og vedlikeholdsintervall.</p>
+    </article>
   </div>
 
-  <div class="card mt-32">
-    <h3>Hvorfor velge oss?</h3>
-    <ul>
-      <li><strong>Dokumentert resultat</strong> – før/etter-bilder i leveranserapport</li>
-      <li><strong>Ryddig kommunikasjon</strong> – tydelig pris og tidspunkt</li>
-      <li><strong>Lokalt firma</strong> – Bergen og omegn</li>
-    </ul>
+  <div class="container" style="margin-top:24px">
+    <a class="btn btn-primary" href="/kontakt-oss/">Be om tilbud</a>
   </div>
-</div></main>
+</main>
 
-<footer class="footer"><div class="container cols">
-  <div><h3>HS Rens & Vedlikehold</h3><p>Ekspert på ventilasjonsrens og varmepumperens.</p></div>
-  <div><h4>Navigasjon</h4><p><a href="/">Forside</a><br><a href="/om-oss/">Om oss</a><br><a href="/kontakt-oss/">Kontakt oss</a></p></div>
-  <div><h4>Serviceområde</h4><p>Bergen og omegn</p></div>
-</div></footer>
-<script src="/assets/js/main.js" defer></script>
-</body></html>
+<footer class="site-footer">
+  <div class="wrap">
+    <div><strong>HS Rens & Vedlikehold</strong></div>
+    <div>Rollandslia 221, 5115 Ulset</div>
+    <div><a href="tel:+4792098742">+47 92 09 87 42</a> • <a href="mailto:post@hsrens.no">post@hsrens.no</a></div>
+  </div>
+  <div class="copy">© 2025 HS Rens & Vedlikehold</div>
+</footer>
+
+</body>
+</html>
