--- a/varmepumperens/index.html
+++ b/varmepumperens/index.html
@@ -1,26 +1,64 @@
-<!doctype html><html lang="no"><head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Varmepumperens – 1399,- inkl. mva | HS Rens & Vedlikehold</title>
-<link rel="stylesheet" href="/assets/css/styles.css">
-</head><body>
-<header class="header"><div class="container nav">
-  <a class="brand" href="/"><img src="/images/logo.jpg" alt="HS Rens & Vedlikehold" class="brand-logo"><div><h1>HS Rens & Vedlikehold</h1><small>Ren luft • Bergen & omegn</small></div></a>
-  <nav><button class="burger">☰</button><div class="menu" id="mainmenu">
-    <a href="/tjenester/">Tjenester</a><a href="/varmepumperens/">Varmepumperens</a><a href="/resultater/">Resultater</a><a href="/om-oss/">Om oss</a><a class="btn" href="/kontakt-oss/">Bestill</a>
-  </div></nav>
-</div></header>
+<!doctype html>
+<html lang="no">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Rens av varmepumpe – HS Rens & Vedlikehold</title>
+  <link rel="stylesheet" href="/assets/css/styles.css">
+</head>
+<body>
 
-<main class="section light"><div class="container">
-  <p class="kicker">Tilbud</p>
-  <h2>Varmepumperens – fastpris <span style="white-space:nowrap">1399,-</span> inkl. mva</h2>
-  <p>Rens av innedel, vifte, lameller og drenering. Resultatet er bedre luft, mindre støy og lengre levetid.</p>
-  <p class="mt-16"><a class="btn" href="/kontakt-oss/">Bestill rens</a></p>
-</div></main>
+<header class="site-header">
+  <div class="container">
+    <nav class="navbar">
+      <a class="logo" href="/">HS Rens & Vedlikehold</a>
+      <div class="navlinks">
+        <a href="/">Forside</a>
+        <a href="/tjenester/">Tjenester</a>
+        <a class="active" href="/varmepumperens/">Varmepumperens</a>
+        <a href="/resultater/">Resultater</a>
+        <a href="/om-oss/">Om oss</a>
+        <a href="/kontakt-oss/">Kontakt oss</a>
+      </div>
+    </nav>
+  </div>
+</header>
 
-<footer class="footer"><div class="container cols">
-  <div><h3>HS Rens & Vedlikehold</h3><p>Ekspert på ventilasjonsrens og varmepumperens.</p></div>
-  <div><h4>Navigasjon</h4><p><a href="/">Forside</a><br><a href="/tjenester/">Tjenester</a><br><a href="/kontakt-oss/">Kontakt oss</a></p></div>
-  <div><h4>Serviceområde</h4><p>Bergen og omegn</p></div>
-</div></footer>
-<script src="/assets/js/main.js" defer></script>
-</body></html>
+<div class="page-hero"><div class="container"><h1>Rens av varmepumpe</h1></div></div>
+
+<main class="section">
+  <div class="container grid grid-2">
+    <section class="card">
+      <h2>Hvorfor rense?</h2>
+      <p>Støv, fett og bakterier bygger seg opp på lameller og viftehjul. En grundig rens gir bedre luft, mer effekt og lavere strømforbruk.</p>
+      <ul>
+        <li>Bedre inneklima</li>
+        <li>Økt varmeeffekt og luftmengde</li>
+        <li>Mindre støy og lukt</li>
+      </ul>
+      <a class="btn btn-primary" href="/kontakt-oss/">Få pris</a>
+    </section>
+
+    <section class="card">
+      <h2>Dette gjør vi</h2>
+      <ol>
+        <li>Dekker til og demonterer innedel</li>
+        <li>Dyp rens av vifte, lameller og kondensbakke</li>
+        <li>Skånsom kjemi + gjennomspyling</li>
+        <li>Funksjonstest og råd om vedlikehold</li>
+      </ol>
+    </section>
+  </div>
+</main>
+
+<footer class="site-footer">
+  <div class="wrap">
+    <div><strong>HS Rens & Vedlikehold</strong></div>
+    <div>Rollandslia 221, 5115 Ulset</div>
+    <div><a href="tel:+4792098742">+47 92 09 87 42</a> • <a href="mailto:post@hsrens.no">post@hsrens.no</a></div>
+  </div>
+  <div class="copy">© 2025 HS Rens & Vedlikehold</div>
+</footer>
+
+</body>
+</html>
