--- a/resultater/index.html
+++ b/resultater/index.html
@@ -1,33 +1,64 @@
-<!doctype html><html lang="no"><head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Resultater – Før/etter | HS Rens & Vedlikehold</title>
-<link rel="stylesheet" href="/assets/css/styles.css">
-</head><body>
-<header class="header"><div class="container nav">
-  <a class="brand" href="/"><img src="/images/logo.jpg" alt="HS Rens & Vedlikehold" class="brand-logo"><div><h1>HS Rens & Vedlikehold</h1><small>Ren luft • Bergen & omegn</small></div></a>
-  <nav><button class="burger">☰</button><div class="menu" id="mainmenu">
-    <a href="/tjenester/">Tjenester</a><a href="/varmepumperens/">Varmepumperens</a><a href="/resultater/">Resultater</a><a href="/om-oss/">Om oss</a><a class="btn" href="/kontakt-oss/">Få tilbud</a>
-  </div></nav>
-</div></header>
+<!doctype html>
+<html lang="no">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Resultater – HS Rens & Vedlikehold</title>
+  <link rel="stylesheet" href="/assets/css/styles.css">
+</head>
+<body>
 
-<main class="section light"><div class="container">
-  <p class="kicker">Før / Etter</p>
-  <h2>Resultater fra faktiske oppdrag</h2>
-
-  <div class="ba-grid mt-32">
-    <!-- Bytt ut filnavnene med dine egne i /images -->
-    <article class="ba-card"><img src="/images/fe-1-before.jpg" alt="Før rens"><img src="/images/fe-1-after.jpg" alt="Etter rens"><div class="cap">Kanalrens – før/etter</div></article>
-    <article class="ba-card"><img src="/images/fe-2-before.jpg" alt="Før rens"><img src="/images/fe-2-after.jpg" alt="Etter rens"><div class="cap">Kanalrens – før/etter</div></article>
-    <article class="ba-card"><img src="/images/fe-3-before.jpg" alt="Før rens"><img src="/images/fe-3-after.jpg" alt="Etter rens"><div class="cap">Varmepumpe – før/etter</div></article>
+<header class="site-header">
+  <div class="container">
+    <nav class="navbar">
+      <a class="logo" href="/">HS Rens & Vedlikehold</a>
+      <div class="navlinks">
+        <a href="/">Forside</a>
+        <a href="/tjenester/">Tjenester</a>
+        <a href="/varmepumperens/">Varmepumperens</a>
+        <a class="active" href="/resultater/">Resultater</a>
+        <a href="/om-oss/">Om oss</a>
+        <a href="/kontakt-oss/">Kontakt oss</a>
+      </div>
+    </nav>
   </div>
+</header>
 
-  <p class="mt-24"><a class="btn" href="/kontakt-oss/">Be om pris</a></p>
-</div></main>
+<div class="page-hero"><div class="container"><h1>Resultater</h1></div></div>
 
-<footer class="footer"><div class="container cols">
-  <div><h3>HS Rens & Vedlikehold</h3><p>Ekspert på ventilasjonsrens og varmepumperens.</p></div>
-  <div><h4>Navigasjon</h4><p><a href="/">Forside</a><br><a href="/tjenester/">Tjenester</a><br><a href="/kontakt-oss/">Kontakt oss</a></p></div>
-  <div><h4>Serviceområde</h4><p>Bergen og omegn</p></div>
-</div></footer>
-<script src="/assets/js/main.js" defer></script>
-</body></html>
+<main class="section">
+  <div class="container">
+    <p>Et lite utvalg av før/etter. Legg gjerne flere bilder i <code>/images</code> så fyller vi på.</p>
+
+    <div class="gallery">
+      <figure class="figure">
+        <img src="/images/before-01.jpg" alt="Før rens kanal">
+        <figcaption>Før rens – ventilasjonskanal</figcaption>
+      </figure>
+      <figure class="figure">
+        <img src="/images/after-01.jpg" alt="Etter rens kanal">
+        <figcaption>Etter rens – ventilasjonskanal</figcaption>
+      </figure>
+      <figure class="figure">
+        <img src="/images/hs-02.png" alt="Logo placeholder">
+        <figcaption>Placeholder – bytt til egne bilder</figcaption>
+      </figure>
+    </div>
+
+    <div style="margin-top:18px">
+      <a class="btn btn-primary" href="/kontakt-oss/">Be om tilbud</a>
+    </div>
+  </div>
+</main>
+
+<footer class="site-footer">
+  <div class="wrap">
+    <div><strong>HS Rens & Vedlikehold</strong></div>
+    <div>Rollandslia 221, 5115 Ulset</div>
+    <div><a href="tel:+4792098742">+47 92 09 87 42</a> • <a href="mailto:post@hsrens.no">post@hsrens.no</a></div>
+  </div>
+  <div class="copy">© 2025 HS Rens & Vedlikehold</div>
+</footer>
+
+</body>
+</html>
