--- a/om-oss/index.html
+++ b/om-oss/index.html
@@ -1,30 +1,59 @@
-<!doctype html><html lang="no"><head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Om oss – HS Rens & Vedlikehold</title>
-<link rel="stylesheet" href="/assets/css/styles.css">
-</head><body>
-<header class="header"><div class="container nav">
-  <a class="brand" href="/"><img src="/images/logo.jpg" alt="HS Rens & Vedlikehold" class="brand-logo"><div><h1>HS Rens & Vedlikehold</h1><small>Ren luft • Bergen & omegn</small></div></a>
-  <nav><button class="burger">☰</button><div class="menu" id="mainmenu">
-    <a href="/tjenester/">Tjenester</a><a href="/varmepumperens/">Varmepumperens</a><a href="/resultater/">Resultater</a><a href="/om-oss/">Om oss</a><a class="btn" href="/kontakt-oss/">Få tilbud</a>
-  </div></nav>
-</div></header>
+<!doctype html>
+<html lang="no">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Om oss – HS Rens & Vedlikehold</title>
+  <link rel="stylesheet" href="/assets/css/styles.css">
+</head>
+<body>
 
-<main class="section light"><div class="container">
-  <h2>Om oss</h2>
-  <p>Lokalt firma i Bergen. Vi leverer ventilasjonsrens, varmepumperens og faste serviceavtaler for bolig og næring.</p>
-
-  <div class="grid mt-32">
-    <article class="card"><h3>Trygghet</h3><p>Skånsom utførelse – vi dekker til og rydder etter oss.</p></article>
-    <article class="card"><h3>Dokumentasjon</h3><p>Du får en enkel rapport med bilder før/etter.</p></article>
-    <article class="card"><h3>Tilgjengelighet</h3><p>Vi svarer raskt og finner tidspunkt som passer.</p></article>
+<header class="site-header">
+  <div class="container">
+    <nav class="navbar">
+      <a class="logo" href="/">HS Rens & Vedlikehold</a>
+      <div class="navlinks">
+        <a href="/">Forside</a>
+        <a href="/tjenester/">Tjenester</a>
+        <a href="/varmepumperens/">Varmepumperens</a>
+        <a href="/resultater/">Resultater</a>
+        <a class="active" href="/om-oss/">Om oss</a>
+        <a href="/kontakt-oss/">Kontakt oss</a>
+      </div>
+    </nav>
   </div>
-</div></main>
+</header>
 
-<footer class="footer"><div class="container cols">
-  <div><h3>HS Rens & Vedlikehold</h3><p>Ekspert på ventilasjonsrens og varmepumperens.</p></div>
-  <div><h4>Navigasjon</h4><p><a href="/">Forside</a><br><a href="/tjenester/">Tjenester</a><br><a href="/kontakt-oss/">Kontakt oss</a></p></div>
-  <div><h4>Serviceområde</h4><p>Bergen og omegn</p></div>
-</div></footer>
-<script src="/assets/js/main.js" defer></script>
-</body></html>
+<div class="page-hero"><div class="container"><h1>Om oss</h1></div></div>
+
+<main class="section">
+  <div class="container grid grid-2">
+    <section class="card">
+      <h2>Lokalt firma – Bergen og omegn</h2>
+      <p>Vi leverer rens av ventilasjonskanaler og varmepumper for private og borettslag. Fokus på kvalitet, ryddighet og god dialog.</p>
+      <p>Trenger du fast vedlikehold? Vi setter opp en enkel plan som passer boligen din.</p>
+      <a class="btn btn-primary" href="/kontakt-oss/">Ta kontakt</a>
+    </section>
+
+    <section class="card">
+      <h2>Hvorfor velge oss?</h2>
+      <ul>
+        <li>Dokumenterte resultater</li>
+        <li>Rask responstid</li>
+        <li>Fornuftige priser</li>
+      </ul>
+    </section>
+  </div>
+</main>
+
+<footer class="site-footer">
+  <div class="wrap">
+    <div><strong>HS Rens & Vedlikehold</strong></div>
+    <div>Rollandslia 221, 5115 Ulset</div>
+    <div><a href="tel:+4792098742">+47 92 09 87 42</a> • <a href="mailto:post@hsrens.no">post@hsrens.no</a></div>
+  </div>
+  <div class="copy">© 2025 HS Rens & Vedlikehold</div>
+</footer>
+
+</body>
+</html>
