--- a/index.html
+++ b/index.html
@@ -3,66 +3,48 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>HS Rens & Vedlikehold – Ren luft i hjemmet</title>
+  <title>HS Rens & Vedlikehold</title>
+  <meta name="description" content="Profesjonell rens av varmepumper i Bergen og omegn. Kampanjepris 1 399,-. Serviceavtaler for borettslag, sameier og næring.">
   <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
 <body>
 
   <!-- Header -->
   <header class="site-header">
-    <div class="container">
-      <nav class="navbar">
-        <a class="logo" href="/">HS Rens & Vedlikehold</a>
-        <div class="navlinks">
-          <a class="active" href="/">Forside</a>
-          <a href="/tjenester/">Tjenester</a>
-          <a href="/varmepumperens/">Varmepumperens</a>
-          <a href="/resultater/">Resultater</a>
-          <a href="/om-oss/">Om oss</a>
-          <a href="/kontakt-oss/">Kontakt oss</a>
-        </div>
-      </nav>
-    </div>
+    <a class="logo" href="/"><img src="/images/hs-02.png" alt="HS Rens & Vedlikehold logo"></a>
+    <nav class="site-nav">
+      <a href="/varmepumperens/">Varmepumperens</a>
+      <a href="/resultater/">Resultater</a>
+      <a href="/om-oss/">Om oss</a>
+      <a href="/kontakt-oss/">Kontakt oss</a>
+    </nav>
+    <a class="cta-phone" href="tel:+4792098742">+47 92 09 87 42</a>
   </header>
 
-  <!-- Hero -->
-  <section class="hero">
-    <div class="container">
-      <h1>Ren luft, bedre inneklima</h1>
-      <p>Profesjonell rens av ventilasjonskanaler og varmepumper i Bergen og omegn.</p>
-      <a class="btn btn-primary" href="/kontakt-oss/">Be om tilbud</a>
-      <a class="btn btn-outline" href="/tjenester/">Se tjenester</a>
-    </div>
-  </section>
+  <main class="container">
+    <h1>Ren luft – bedre inneklima</h1>
+    <p>Vi rengjør varmepumper og tilbyr serviceavtaler for borettslag, sameier og næring.</p>
 
-  <!-- Tjenester kort -->
-  <main class="section">
-    <div class="container">
-      <div class="cards">
-        <article class="card card-service">
-          <h3>Ventilasjonsrens</h3>
-          <p>Fjerner støv og avleiringer i kanaler for tryggere og mer effektiv ventilasjon.</p>
-        </article>
-        <article class="card card-service">
-          <h3>Rens av varmepumpe</h3>
-          <p>Dyp rens av innedel/ute­del for bedre effekt, lavere strømforbruk og renere luft.</p>
-        </article>
-        <article class="card card-service">
-          <h3>Kontroll & filterbytte</h3>
-          <p>Enkel helsesjekk av anlegg og anbefalinger for vedlikehold og filter.</p>
-        </article>
-      </div>
-    </div>
+    <section class="cards">
+      <article class="card">
+        <h2>Kampanjepris</h2>
+        <p><strong>Varmepumperens kun 1 399,-</strong> inkl. mva. Få renere luft og bedre effekt.</p>
+        <p><a class="btn" href="tel:+4792098742">Bestill nå</a></p>
+      </article>
+
+      <article class="card">
+        <h2>Serviceavtaler</h2>
+        <p>Årlige serviceavtaler for <strong>borettslag, sameier og næring</strong>. Fast pris per enhet og enkel dokumentasjon.</p>
+        <p><a class="btn btn-secondary" href="/kontakt-oss/">Få tilbud</a></p>
+      </article>
+    </section>
   </main>
 
   <!-- Footer -->
   <footer class="site-footer">
-    <div class="wrap">
-      <div><strong>HS Rens & Vedlikehold</strong></div>
-      <div>Rollandslia 221, 5115 Ulset</div>
-      <div><a href="tel:+4792098742">+47 92 09 87 42</a> • <a href="mailto:post@hsrens.no">post@hsrens.no</a></div>
-    </div>
-    <div class="copy">© 2025 HS Rens & Vedlikehold</div>
+    <div class="footer-brand">HS Rens & Vedlikehold</div>
+    <div>Rollandslia 221, 5115 Ulset</div>
+    <div><a href="tel:+4792098742">+47 92 09 87 42</a> • <a href="mailto:post@hsrens.no">post@hsrens.no</a></div>
   </footer>
 
 </body>
