--- a/varmepumperens/index.html
+++ b/varmepumperens/index.html
@@ -4,61 +4,56 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Rens av varmepumpe – HS Rens & Vedlikehold</title>
+  <meta name="description" content="Profesjonell rens av varmepumper. Kampanjepris 1 399,-. Serviceavtaler for borettslag, sameier og næring.">
   <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
 <body>
 
-<header class="site-header">
-  <div class="container">
-    <nav class="navbar">
-      <a class="logo" href="/">HS Rens & Vedlikehold</a>
-      <div class="navlinks">
-        <a href="/">Forside</a>
-        <a href="/tjenester/">Tjenester</a>
-        <a class="active" href="/varmepumperens/">Varmepumperens</a>
-        <a href="/resultater/">Resultater</a>
-        <a href="/om-oss/">Om oss</a>
-        <a href="/kontakt-oss/">Kontakt oss</a>
-      </div>
+  <header class="site-header">
+    <a class="logo" href="/"><img src="/images/hs-02.png" alt="HS Rens & Vedlikehold logo"></a>
+    <nav class="site-nav">
+      <a aria-current="page" href="/varmepumperens/">Varmepumperens</a>
+      <a href="/resultater/">Resultater</a>
+      <a href="/om-oss/">Om oss</a>
+      <a href="/kontakt-oss/">Kontakt oss</a>
     </nav>
-  </div>
-</header>
+    <a class="cta-phone" href="tel:+4792098742">+47 92 09 87 42</a>
+  </header>
 
-<div class="page-hero"><div class="container"><h1>Rens av varmepumpe</h1></div></div>
+  <main class="container">
+    <h1>Rens av varmepumpe</h1>
+    <p>Dyp rens av innedel/utedel gir bedre varmeeffekt, lavere strømforbruk og renere luft.</p>
 
-<main class="section">
-  <div class="container grid grid-2">
-    <section class="card">
-      <h2>Hvorfor rense?</h2>
-      <p>Støv, fett og bakterier bygger seg opp på lameller og viftehjul. En grundig rens gir bedre luft, mer effekt og lavere strømforbruk.</p>
-      <ul>
-        <li>Bedre inneklima</li>
-        <li>Økt varmeeffekt og luftmengde</li>
-        <li>Mindre støy og lukt</li>
-      </ul>
-      <a class="btn btn-primary" href="/kontakt-oss/">Få pris</a>
+    <section class="cards">
+      <article class="card">
+        <h2>Dette gjør vi</h2>
+        <ul class="checklist">
+          <li>Grundig vask av lameller, viftehjul og filter</li>
+          <li>Fjerner støv, fett og belegg</li>
+          <li>Funksjonstest og enkel rapport</li>
+        </ul>
+      </article>
+
+      <article class="card">
+        <h2>Kampanjepris</h2>
+        <p><strong>Varmepumperens: 1 399,-</strong> inkl. mva</p>
+        <p class="muted">Gjelder standard boliginstallasjoner i Bergen og omegn.</p>
+        <p><a class="btn" href="tel:+4792098742">Bestill rens nå</a></p>
+      </article>
+
+      <article class="card">
+        <h2>Serviceavtaler</h2>
+        <p>Årlige serviceavtaler for <strong>borettslag, sameier og næring</strong>. Fast pris per enhet og samlet plan for vedlikehold.</p>
+        <p><a class="btn btn-secondary" href="/kontakt-oss/">Få tilbud til deres borettslag</a></p>
+      </article>
     </section>
+  </main>
 
-    <section class="card">
-      <h2>Dette gjør vi</h2>
-      <ol>
-        <li>Dekker til og demonterer innedel</li>
-        <li>Dyp rens av vifte, lameller og kondensbakke</li>
-        <li>Skånsom kjemi + gjennomspyling</li>
-        <li>Funksjonstest og råd om vedlikehold</li>
-      </ol>
-    </section>
-  </div>
-</main>
-
-<footer class="site-footer">
-  <div class="wrap">
-    <div><strong>HS Rens & Vedlikehold</strong></div>
+  <footer class="site-footer">
+    <div class="footer-brand">HS Rens & Vedlikehold</div>
     <div>Rollandslia 221, 5115 Ulset</div>
     <div><a href="tel:+4792098742">+47 92 09 87 42</a> • <a href="mailto:post@hsrens.no">post@hsrens.no</a></div>
-  </div>
-  <div class="copy">© 2025 HS Rens & Vedlikehold</div>
-</footer>
+  </footer>
 
 </body>
 </html>
