--- a/resultater/index.html
+++ b/resultater/index.html
@@ -3,62 +3,55 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Resultater – HS Rens & Vedlikehold</title>
+  <title>Resultater – Før & Etter | HS Rens & Vedlikehold</title>
+  <meta name="description" content="Se før- og etterbilder fra arbeid utført av HS Rens & Vedlikehold.">
   <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
 <body>
 
-<header class="site-header">
-  <div class="container">
-    <nav class="navbar">
-      <a class="logo" href="/">HS Rens & Vedlikehold</a>
-      <div class="navlinks">
-        <a href="/">Forside</a>
-        <a href="/tjenester/">Tjenester</a>
-        <a href="/varmepumperens/">Varmepumperens</a>
-        <a class="active" href="/resultater/">Resultater</a>
-        <a href="/om-oss/">Om oss</a>
-        <a href="/kontakt-oss/">Kontakt oss</a>
-      </div>
+  <header class="site-header">
+    <a class="logo" href="/"><img src="/images/hs-02.png" alt="HS Rens & Vedlikehold logo"></a>
+    <nav class="site-nav">
+      <a href="/varmepumperens/">Varmepumperens</a>
+      <a aria-current="page" href="/resultater/">Resultater</a>
+      <a href="/om-oss/">Om oss</a>
+      <a href="/kontakt-oss/">Kontakt oss</a>
     </nav>
-  </div>
-</header>
+    <a class="cta-phone" href="tel:+4792098742">+47 92 09 87 42</a>
+  </header>
 
-<div class="page-hero"><div class="container"><h1>Resultater</h1></div></div>
-
-<main class="section">
-  <div class="container">
-    <p>Et lite utvalg av før/etter. Legg gjerne flere bilder i <code>/images</code> så fyller vi på.</p>
+  <main class="container">
+    <h1>Resultater – Før & etter</h1>
+    <p>Se hva en skikkelig rens gjør. Legg egne bilder i <code>/images</code> og oppdater filnavnene under.</p>
 
     <div class="gallery">
-      <figure class="figure">
-        <img src="/images/before-01.jpg" alt="Før rens kanal">
-        <figcaption>Før rens – ventilasjonskanal</figcaption>
+      <figure class="before-after">
+        <img src="/images/for-1.jpg" alt="Før rens – kanal">
+        <img src="/images/etter-1.jpg" alt="Etter rens – kanal">
+        <figcaption>Kanal før og etter rens</figcaption>
       </figure>
-      <figure class="figure">
-        <img src="/images/after-01.jpg" alt="Etter rens kanal">
-        <figcaption>Etter rens – ventilasjonskanal</figcaption>
-      </figure>
-      <figure class="figure">
-        <img src="/images/hs-02.png" alt="Logo placeholder">
-        <figcaption>Placeholder – bytt til egne bilder</figcaption>
-      </figure>
-    </div>
 
-    <div style="margin-top:18px">
-      <a class="btn btn-primary" href="/kontakt-oss/">Be om tilbud</a>
-    </div>
-  </div>
-</main>
+      <figure class="before-after">
+        <img src="/images/for-2.jpg" alt="Før rens – varmepumpe">
+        <img src="/images/etter-2.jpg" alt="Etter rens – varmepumpe">
+        <figcaption>Varmepumpe før og etter</figcaption>
+      </figure>
 
-<footer class="site-footer">
-  <div class="wrap">
-    <div><strong>HS Rens & Vedlikehold</strong></div>
+      <!-- Kopier blokka for flere sett:
+      <figure class="before-after">
+        <img src="/images/for-3.jpg" alt="Før">
+        <img src="/images/etter-3.jpg" alt="Etter">
+        <figcaption>Beskrivelse</figcaption>
+      </figure>
+      -->
+    </div>
+  </main>
+
+  <footer class="site-footer">
+    <div class="footer-brand">HS Rens & Vedlikehold</div>
     <div>Rollandslia 221, 5115 Ulset</div>
     <div><a href="tel:+4792098742">+47 92 09 87 42</a> • <a href="mailto:post@hsrens.no">post@hsrens.no</a></div>
-  </div>
-  <div class="copy">© 2025 HS Rens & Vedlikehold</div>
-</footer>
+  </footer>
 
 </body>
 </html>
