--- a/om-oss/index.html
+++ b/om-oss/index.html
@@ -4,56 +4,37 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Om oss – HS Rens & Vedlikehold</title>
+  <meta name="description" content="Lokalt firma i Bergen som leverer rens av varmepumper og serviceavtaler for borettslag og næring.">
   <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
 <body>
 
-<header class="site-header">
-  <div class="container">
-    <nav class="navbar">
-      <a class="logo" href="/">HS Rens & Vedlikehold</a>
-      <div class="navlinks">
-        <a href="/">Forside</a>
-        <a href="/tjenester/">Tjenester</a>
-        <a href="/varmepumperens/">Varmepumperens</a>
-        <a href="/resultater/">Resultater</a>
-        <a class="active" href="/om-oss/">Om oss</a>
-        <a href="/kontakt-oss/">Kontakt oss</a>
-      </div>
+  <header class="site-header">
+    <a class="logo" href="/"><img src="/images/hs-02.png" alt="HS Rens & Vedlikehold logo"></a>
+    <nav class="site-nav">
+      <a href="/varmepumperens/">Varmepumperens</a>
+      <a href="/resultater/">Resultater</a>
+      <a aria-current="page" href="/om-oss/">Om oss</a>
+      <a href="/kontakt-oss/">Kontakt oss</a>
     </nav>
-  </div>
-</header>
+    <a class="cta-phone" href="tel:+4792098742">+47 92 09 87 42</a>
+  </header>
 
-<div class="page-hero"><div class="container"><h1>Om oss</h1></div></div>
+  <main class="container">
+    <h1>Om oss</h1>
+    <p>Vi er et lokalt firma som brenner for ren luft og gode inneklima. Vi utfører rens av varmepumper i Bergen og omegn, med fokus på kvalitet, ryddighet og god kommunikasjon.</p>
+    <ul class="checklist">
+      <li>Ryddig prosess og dokumenterte resultater</li>
+      <li>Rask respons og enkle bestillinger</li>
+      <li>Serviceavtaler for borettslag, sameier og næring</li>
+    </ul>
+  </main>
 
-<main class="section">
-  <div class="container grid grid-2">
-    <section class="card">
-      <h2>Lokalt firma – Bergen og omegn</h2>
-      <p>Vi leverer rens av ventilasjonskanaler og varmepumper for private og borettslag. Fokus på kvalitet, ryddighet og god dialog.</p>
-      <p>Trenger du fast vedlikehold? Vi setter opp en enkel plan som passer boligen din.</p>
-      <a class="btn btn-primary" href="/kontakt-oss/">Ta kontakt</a>
-    </section>
-
-    <section class="card">
-      <h2>Hvorfor velge oss?</h2>
-      <ul>
-        <li>Dokumenterte resultater</li>
-        <li>Rask responstid</li>
-        <li>Fornuftige priser</li>
-      </ul>
-    </section>
-  </div>
-</main>
-
-<footer class="site-footer">
-  <div class="wrap">
-    <div><strong>HS Rens & Vedlikehold</strong></div>
+  <footer class="site-footer">
+    <div class="footer-brand">HS Rens & Vedlikehold</div>
     <div>Rollandslia 221, 5115 Ulset</div>
     <div><a href="tel:+4792098742">+47 92 09 87 42</a> • <a href="mailto:post@hsrens.no">post@hsrens.no</a></div>
-  </div>
-  <div class="copy">© 2025 HS Rens & Vedlikehold</div>
-</footer>
+  </footer>
 
 </body>
 </html>
