--- a/kontakt-oss/index.html
+++ b/kontakt-oss/index.html
@@ -4,75 +4,47 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Kontakt oss – HS Rens & Vedlikehold</title>
+  <meta name="description" content="Kontakt HS Rens & Vedlikehold. Vi tilbyr kampanjepris på varmepumperens og serviceavtaler for borettslag.">
   <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
-<body class="contact">
+<body>
 
-  <!-- Header -->
   <header class="site-header">
-    <div class="container">
-      <nav class="navbar">
-        <a class="logo" href="/">HS Rens & Vedlikehold</a>
-        <div class="navlinks">
-          <a href="/tjenester/">Tjenester</a>
-          <a href="/varmepumperens/">Varmepumperens</a>
-          <a href="/resultater/">Resultater</a>
-          <a href="/om-oss/">Om oss</a>
-          <a class="active" href="/kontakt-oss/">Kontakt oss</a>
-        </div>
-      </nav>
-    </div>
+    <a class="logo" href="/"><img src="/images/hs-02.png" alt="HS Rens & Vedlikehold logo"></a>
+    <nav class="site-nav">
+      <a href="/varmepumperens/">Varmepumperens</a>
+      <a href="/resultater/">Resultater</a>
+      <a href="/om-oss/">Om oss</a>
+      <a aria-current="page" href="/kontakt-oss/">Kontakt oss</a>
+    </nav>
+    <a class="cta-phone" href="tel:+4792098742">+47 92 09 87 42</a>
   </header>
 
-  <!-- Hero -->
-  <div class="page-hero">
-    <div class="container">
-      <h1>Kontakt oss</h1>
-    </div>
-  </div>
+  <main class="container">
+    <h1>Kontakt oss</h1>
 
-  <!-- Content -->
-  <main class="section">
-    <div class="container grid grid-2">
-      <section class="card">
-        <h2>HS Rens & Vedlikehold</h2>
+    <section class="contact-card">
+      <h2>HS Rens & Vedlikehold</h2>
+      <p><strong>Adresse:</strong> Rollandslia 221, 5115 Ulset</p>
+      <p><strong>Telefon:</strong> <a href="tel:+4792098742">+47 92 09 87 42</a></p>
+      <p><strong>E-post:</strong> <a href="mailto:post@hsrens.no">post@hsrens.no</a></p>
+      <p class="muted">Vi tilbyr også årlige serviceavtaler for borettslag, sameier og næring.</p>
 
-        <p class="kvp"><b>Adresse:</b> Rollandslia 221, 5115 Ulset</p>
-        <p class="kvp"><b>Telefon:</b> <a href="tel:+4740000000">+47 40 00 00 00</a></p>
-        <p class="kvp"><b>E-post:</b> <a href="mailto:post@hsrens.no">post@hsrens.no</a></p>
-
-        <div style="margin-top:14px">
-          <iframe class="map"
-            src="https://www.google.com/maps?q=Rollandslia%20221%2C%205115%20Ulset&hl=no&z=15&output=embed"
-            loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-      </section>
-
-      <section class="card">
-        <h2>Be om tilbud</h2>
-        <p>Send oss noen ord om hva du ønsker rengjort, så svarer vi raskt.</p>
-        <form name="kontakt" method="POST" data-netlify="true">
-          <input type="hidden" name="form-name" value="kontakt">
-          <div style="display:grid; gap:10px">
-            <input required name="navn"  placeholder="Navn"  />
-            <input required name="epost" type="email" placeholder="E-post" />
-            <input name="telefon" placeholder="Telefon" />
-            <textarea required name="melding" rows="6" placeholder="Hva kan vi hjelpe med?"></textarea>
-            <button type="submit" style="background:var(--brand);color:#fff;border:0;padding:12px 16px;border-radius:10px;font-weight:700">Send</button>
-          </div>
-        </form>
-      </section>
-    </div>
+      <div class="map-wrap">
+        <iframe
+          title="HS Rens & Vedlikehold – kart"
+          width="100%" height="380" style="border:0" loading="lazy" allowfullscreen
+          referrerpolicy="no-referrer-when-downgrade"
+          src="https://www.google.com/maps?q=Rollandslia%20221,%205115%20Ulset&hl=no&z=15&output=embed">
+        </iframe>
+      </div>
+    </section>
   </main>
 
-  <!-- Footer -->
   <footer class="site-footer">
-    <div class="wrap">
-      <div><strong>HS Rens & Vedlikehold</strong></div>
-      <div>Rollandslia 221, 5115 Ulset</div>
-      <div><a href="tel:+4740000000">+47 40 00 00 00</a> • <a href="mailto:post@hsrens.no">post@hsrens.no</a></div>
-    </div>
-    <div class="copy">© 2025 HS Rens & Vedlikehold</div>
+    <div class="footer-brand">HS Rens & Vedlikehold</div>
+    <div>Rollandslia 221, 5115 Ulset</div>
+    <div><a href="tel:+4792098742">+47 92 09 87 42</a> • <a href="mailto:post@hsrens.no">post@hsrens.no</a></div>
   </footer>
 
 </body>
