--- a/tjenester/index.html
+++ b/tjenester/index.html
@@ -3,60 +3,66 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Tjenester – HS Rens & Vedlikehold</title>
+  <title>Ventilasjonsrens – HS Rens & Vedlikehold</title>
+  <meta name="description" content="Rens av ventilasjonsanlegg: kanaler, ventiler og avtrekk. Dokumentasjon med før/etter-bilder. Serviceavtaler for borettslag og næring.">
   <link rel="stylesheet" href="/assets/css/styles.css">
+  <style>
+    .steps{display:grid;gap:12px}
+    @media(min-width:900px){.steps{grid-template-columns:repeat(2,1fr)}}
+    .step{background:#fff;border:1px solid #e6eef4;border-radius:12px;padding:16px}
+    .note{color:#475569}
+  </style>
 </head>
 <body>
 
-<header class="site-header">
-  <div class="container">
-    <nav class="navbar">
-      <a class="logo" href="/">HS Rens & Vedlikehold</a>
-      <div class="navlinks">
-        <a href="/">Forside</a>
-        <a class="active" href="/tjenester/">Tjenester</a>
-        <a href="/varmepumperens/">Varmepumperens</a>
-        <a href="/resultater/">Resultater</a>
-        <a href="/om-oss/">Om oss</a>
-        <a href="/kontakt-oss/">Kontakt oss</a>
-      </div>
+  <header class="site-header">
+    <a class="logo" href="/"><img src="/images/hs-02.png" alt="HS Rens & Vedlikehold logo" style="height:80px;max-height:100px;"></a>
+    <nav class="site-nav">
+      <a aria-current="page" href="/tjenester/">Ventilasjonsrens</a>
+      <a href="/varmepumperens/">Varmepumperens</a>
+      <a href="/resultater/">Resultater</a>
+      <a href="/om-oss/">Om oss</a>
+      <a href="/kontakt-oss/">Kontakt oss</a>
     </nav>
-  </div>
-</header>
+    <a class="cta-phone" href="tel:+4792098742">+47 92 09 87 42</a>
+  </header>
 
-<div class="page-hero"><div class="container"><h1>Tjenester</h1></div></div>
+  <main class="container">
+    <h1>Ventilasjonsrens</h1>
+    <p>Grundig rens av kanaler, ventiler og avtrekk – for bedre luftkvalitet og mer effektiv ventilasjon. Vi leverer alltid før/etter-bilder i rapport.</p>
 
-<main class="section">
-  <div class="container cards">
-    <article class="card card-service">
-      <h3>Ventilasjonsrens</h3>
-      <p>Rens av kjøkkenavtrekk og ventilasjonskanaler. Vi bruker roterende børster og kraftig avsug for å fjerne støv og fett.</p>
-    </article>
+    <section class="steps" style="margin-top:14px">
+      <div class="step">
+        <h2>1. Forarbeid & inspeksjon</h2>
+        <p>Tildekking, visuell sjekk og vurdering av tilkomst. Vi avtaler hvor vi starter og forventet varighet.</p>
+      </div>
+      <div class="step">
+        <h2>2. Mekanisk rens</h2>
+        <p>Børsting og utsug fjerner belegg, fett og støv. Ventiler tas ned og renses separat.</p>
+      </div>
+      <div class="step">
+        <h2>3. Kontroll & montering</h2>
+        <p>Ventiler monteres korrekt, funksjon sjekkes, og vi rydder etter oss.</p>
+      </div>
+      <div class="step">
+        <h2>4. Dokumentasjon</h2>
+        <p>Du får før/etter-bilder og korte kommentarer på tilstand og anbefalt intervall videre.</p>
+      </div>
+    </section>
 
-    <article class="card card-service">
-      <h3>Rens av varmepumpe</h3>
-      <p>Demontering og dyp rens av innedel (ev. utedel). Bedre luftkvalitet, høyere effekt og lavere strømforbruk.</p>
-    </article>
+    <p class="note" style="margin-top:14px"><strong>Serviceavtaler:</strong> Vi tilbyr årlige avtaler for borettslag, sameier og næring – fast pris per enhet og planlagt intervall.</p>
 
-    <article class="card card-service">
-      <h3>Kanalkontroll & filter</h3>
-      <p>Visuell kontroll, enkel tetthetssjekk og rådgivning om filter og vedlikeholdsintervall.</p>
-    </article>
-  </div>
+    <p style="margin-top:10px">
+      <a class="btn" href="/kontakt-oss/">Be om tilbud</a>
+      <a class="btn btn-secondary" href="/resultater/">Se før/etter</a>
+    </p>
+  </main>
 
-  <div class="container" style="margin-top:24px">
-    <a class="btn btn-primary" href="/kontakt-oss/">Be om tilbud</a>
-  </div>
-</main>
-
-<footer class="site-footer">
-  <div class="wrap">
-    <div><strong>HS Rens & Vedlikehold</strong></div>
+  <footer class="site-footer">
+    <div class="footer-brand">HS Rens & Vedlikehold</div>
     <div>Rollandslia 221, 5115 Ulset</div>
     <div><a href="tel:+4792098742">+47 92 09 87 42</a> • <a href="mailto:post@hsrens.no">post@hsrens.no</a></div>
-  </div>
-  <div class="copy">© 2025 HS Rens & Vedlikehold</div>
-</footer>
+  </footer>
 
 </body>
 </html>
