--- a/varmepumperens/index.html
+++ b/varmepumperens/index.html
@@ -4,14 +4,15 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Rens av varmepumpe – HS Rens & Vedlikehold</title>
-  <meta name="description" content="Profesjonell rens av varmepumper. Kampanjepris 1 399,-. Serviceavtaler for borettslag, sameier og næring.">
+  <meta name="description" content="Profesjonell rens av varmepumper. Kampanjepris 1 399,-. Årlige serviceavtaler for borettslag og næring.">
   <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
 <body>
 
   <header class="site-header">
-    <a class="logo" href="/"><img src="/images/hs-02.png" alt="HS Rens & Vedlikehold logo"></a>
+    <a class="logo" href="/"><img src="/images/hs-02.png" alt="HS Rens & Vedlikehold logo" style="height:80px;max-height:100px;"></a>
     <nav class="site-nav">
+      <a href="/tjenester/">Ventilasjonsrens</a>
       <a aria-current="page" href="/varmepumperens/">Varmepumperens</a>
       <a href="/resultater/">Resultater</a>
       <a href="/om-oss/">Om oss</a>
@@ -21,30 +22,30 @@
   </header>
 
   <main class="container">
-    <h1>Rens av varmepumpe</h1>
-    <p>Dyp rens av innedel/utedel gir bedre varmeeffekt, lavere strømforbruk og renere luft.</p>
+    <h1>Varmepumperens</h1>
+    <p>Dyp rens av innedel (og utedel ved behov) gir bedre luft, høyere effekt og lavere strømforbruk.</p>
 
     <section class="cards">
       <article class="card">
-        <h2>Dette gjør vi</h2>
-        <ul class="checklist">
-          <li>Grundig vask av lameller, viftehjul og filter</li>
-          <li>Fjerner støv, fett og belegg</li>
-          <li>Funksjonstest og enkel rapport</li>
-        </ul>
-      </article>
-
-      <article class="card">
         <h2>Kampanjepris</h2>
-        <p><strong>Varmepumperens: 1 399,-</strong> inkl. mva</p>
+        <p><strong>Innedel: 1 399,-</strong> inkl. mva</p>
         <p class="muted">Gjelder standard boliginstallasjoner i Bergen og omegn.</p>
         <p><a class="btn" href="tel:+4792098742">Bestill rens nå</a></p>
       </article>
 
       <article class="card">
+        <h2>Dette gjør vi</h2>
+        <ul class="checklist">
+          <li>Skånsom, grundig vask av lameller og viftehjul</li>
+          <li>Rens av filter og kondensbakke</li>
+          <li>Funksjonstest og enkle råd om vedlikehold</li>
+        </ul>
+      </article>
+
+      <article class="card">
         <h2>Serviceavtaler</h2>
-        <p>Årlige serviceavtaler for <strong>borettslag, sameier og næring</strong>. Fast pris per enhet og samlet plan for vedlikehold.</p>
-        <p><a class="btn btn-secondary" href="/kontakt-oss/">Få tilbud til deres borettslag</a></p>
+        <p>Årlige avtaler for <strong>borettslag, sameier og næring</strong> – fast pris per enhet og planlagt intervall.</p>
+        <p><a class="btn btn-secondary" href="/kontakt-oss/">Be om tilbud</a></p>
       </article>
     </section>
   </main>
