--- a/kontakt-oss/index.html
+++ b/kontakt-oss/index.html
@@ -4,14 +4,15 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Kontakt oss – HS Rens & Vedlikehold</title>
-  <meta name="description" content="Kontakt HS Rens & Vedlikehold. Vi tilbyr kampanjepris på varmepumperens og serviceavtaler for borettslag.">
+  <meta name="description" content="Kontakt HS Rens & Vedlikehold. Vi tilbyr ventilasjonsrens, varmepumperens og serviceavtaler for borettslag og næring.">
   <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
 <body>
 
   <header class="site-header">
-    <a class="logo" href="/"><img src="/images/hs-02.png" alt="HS Rens & Vedlikehold logo"></a>
+    <a class="logo" href="/"><img src="/images/hs-02.png" alt="HS Rens & Vedlikehold logo" style="height:80px;max-height:100px;"></a>
     <nav class="site-nav">
+      <a href="/tjenester/">Ventilasjonsrens</a>
       <a href="/varmepumperens/">Varmepumperens</a>
       <a href="/resultater/">Resultater</a>
       <a href="/om-oss/">Om oss</a>
@@ -28,7 +29,7 @@
       <p><strong>Adresse:</strong> Rollandslia 221, 5115 Ulset</p>
       <p><strong>Telefon:</strong> <a href="tel:+4792098742">+47 92 09 87 42</a></p>
       <p><strong>E-post:</strong> <a href="mailto:post@hsrens.no">post@hsrens.no</a></p>
-      <p class="muted">Vi tilbyr også årlige serviceavtaler for borettslag, sameier og næring.</p>
+      <p class="muted">Vi tilbyr årlige serviceavtaler for borettslag, sameier og næring.</p>
 
       <div class="map-wrap">
         <iframe
